--- a/appsettings.json
+++ b/appsettings.json
@@ -7,12 +7,11 @@
     }
   },
   "ConnectionStrings" : {
-    "DefaultConnection" : "server=localhost;userid=root;password=;database=multistores;"
+    "DefaultConnection" : "server=localhost;userid=multiStore;password=7*hgV2v5;database=kuicksav_multiStore;"
   },
   "AllowedHosts": "*",
   "Jwt":{
     "key":"AshProgHelperSecurityKey",
     "Issuer":"AspProgHelper.Com"
-    
   }
 }
