--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings" : {
-    "DefaultConnection" : "server=localhost;userid=root;password=;database=quizdb;"
+    "DefaultConnection" : "server=localhost;userid=root;password=;database=quizapppdb;"
   },
   "AllowedHosts": "*",
   "Jwt":{
